--- a/R/sf-crime.Rmd
+++ b/R/sf-crime.Rmd
@@ -3,17 +3,28 @@ title: "SF-crime"
 output: html_document
 ---
 
-[San Francisco crime dataset from Kaggle](https://www.kaggle.com/c/???)
+[San Francisco crime dataset from Kaggle](https://www.kaggle.com/c/sf-crime)
 
-```{r}
-library(ggplot2)    # nicer graphs
-library(data.table) # fast data.frame
-#library(scales)
+## Data fields
+
+* Dates - timestamp of the crime incident
+* Category - category of the crime incident (only in train.csv). This is the target variable you are going to predict.
+* Descript - detailed description of the crime incident (only in train.csv)
+* DayOfWeek - the day of the week
+* PdDistrict - name of the Police Department District
+* Resolution - how the crime incident was resolved (only in train.csv)
+* Address - the approximate street address of the crime incident
+* X - Longitude
+* Y - Latitude
+
+
+```{r, echo=FALSE, message=FALSE}
+library(ggplot2)    # Data visualization
+library(data.table) # Much faster data reading
+library(dplyr)      # Data aggregation etc.
 ```
 
 ```{r, echo = FALSE}
-file <- gzfile("../data/train.csv.gz")
-
 start.time <- Sys.time()
 train <- fread("xzcat ../data/train.csv.xz", header = TRUE)
 end.time <- Sys.time()
@@ -21,21 +32,43 @@ end.time <- Sys.time()
 cat(sprintf("Loaded %d rows in %.1f seconds.\n", nrow(train), end.time - start.time))
 ```
 
-## Data Cleansing
-
-```{r}
+```{r, echo = FALSE}
 train$Dates <- as.POSIXct(train$Dates, "PST")
 train$Year  <- as.numeric(format(train$Dates, "%Y"))
+train$Month <- as.numeric(format(train$Dates, "%m"))
 
+train$Category <- as.factor(train$Category)
+```
+
+### Frequency of Events per Category
+
+```{r, echo = FALSE}
+# compute montly count per Category
+train.agg <- train %>% group_by(Year, Month, Category) %>% summarize(count=n())
+train.agg$Date <- as.POSIXct(paste(train.agg$Year, train.agg$Month, "01", sep = "-")) # set date to first of month
+
+# set monthly count to 0 for missing values
+alldates <- data.frame(Date=with(train.agg, seq(min(Date), max(Date), by="month")))
+allcatdates <- merge(alldates, data.frame(Category=levels(train$Category)))
+train.agg <- merge(train.agg, allcatdates, by=c("Date", "Category"), all = TRUE)
+train.agg[is.na(train.agg$count)]$count <- 0
+
+# plot montly count per Category
+ggplot(train.agg, aes(x = Date, y = count, group = Category, col = Category)) +
+  geom_line(size=0.2) +
+  facet_wrap(~Category, ncol = 5, scales = "free_y") +
+  theme(legend.position="none", axis.text=element_text(size=5), strip.text = element_text(size = 5)) +
+  scale_y_continuous(limits = c(0, NA)) +
+  labs(title="Frequency of Events per Category")
+```
+
+### Location of Events in 2010
+
+```{r, echo = FALSE}
 train <- subset(train, Y < 40)
 
 train <- subset(train, Year == 2010)
 
-str(train)
-```
-
-
-```{r, echo = FALSE}
 ggplot(train, aes(x = X, y = Y, col = PdDistrict)) + geom_point(size = 0.1, alpha = 0.5)
 ```
 
