--- a/R/sf-crime.Rmd
+++ b/R/sf-crime.Rmd
@@ -23,6 +23,7 @@ library(ggplot2)    # Data visualization
 library(data.table) # Much faster data reading
 library(dplyr)      # Data aggregation etc.
 library(scales)     # Plot scaling
+library(ggmap)
 ```
 
 ```{r, echo = FALSE}
@@ -59,8 +60,8 @@ breaks <- seq(as.POSIXct("2003-01-01"), as.POSIXct("2015-01-01"), by="2 years")
 ggplot(train.agg, aes(x = Date, y = count, group = Category, col = Category)) +
   geom_line(size=0.2) +
   facet_wrap(~Category, ncol = 5, scales = "free_y") +
-  theme(legend.position="none",
-        axis.text=element_text(size=5),
+  theme(legend.position = "none",
+        axis.text = element_text(size = 5),
         strip.text = element_text(size = 5)) +
   scale_y_continuous(limits = c(0, NA)) +
   scale_x_datetime(breaks = breaks, labels = format(breaks, "%Y")) +
@@ -69,12 +70,16 @@ ggplot(train.agg, aes(x = Date, y = count, group = Category, col = Category)) +
 
 ### Location of Events in 2010
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, message=FALSE}
 train <- subset(train, Y < 40)
 
 train <- subset(train, Year == 2010)
 
-ggplot(train, aes(x = X, y = Y, col = PdDistrict)) + geom_point(size = 0.1, alpha = 0.5)
+#gglMap <- get_map("San Francisco", zoom = 12, color = "bw")
+osmMap<-get_map("San Francisco", zoom = 12, source="osm", color = "bw")
+
+ggmap(osmMap) +
+  geom_point(data = train, aes(x = X, y = Y, col = PdDistrict), size = 0.1, alpha = 0.3) +
+  facet_wrap(~PdDistrict, ncol = 5) +
+  theme(legend.position = "none", axis.text = element_text(size = 5))
 ```
-
-
